<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <ListPreference
            app:defaultValue="@string/ln_english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/key_language"
            app:icon="@drawable/ic_baseline_g_translate_24"
            app:title="@string/sl_language"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="false"
            app:key="@string/key_reminder9"
            app:icon="@drawable/ic_baseline_notifications_active_24"
            app:title="@string/reminder_at_9" />

    </PreferenceCategory>

</PreferenceScreen>